--- a/demo/templates/Profile.html
+++ b/demo/templates/Profile.html
@@ -5,190 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New User Form</title>
-    <style>
-        
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #FDE4EC;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            padding: 20px;
-            max-width: 1034px;
-            margin: 0 auto;
-            border-radius: 10px;
-            margin-top: 15px;
-        }
-        .module-container {
-            padding: 20px;
-            background-color: #FFFFFF;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-        }
-        
-        .module-container h2 {
-            color: #0E0D0D;
-            margin-left: 97px;
-        }
-        .user-modules, .new-user {
-        
-            padding: 16px;
-            width: 1221px;
-
-        }
-        .user-modules h6 {
-            color: #B64162;
-            font-size: 17px;
-            margin: 0;
-            margin-left: 24px;
-}
-        .new-user p {
-            margin: 0;
-            color: #1a1919;
-            margin-left: 54px;
-        }
-        .form-row {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 15px;
-        }
-        .form-row .input-container {
-            width: 48%;
-        }
-        .form-row .input-container input[type="text"],
-        .form-row .input-container input[type="email"],
-        .form-row .input-container input[type="password"] {
-            width: 97%;
-            padding: 0px;
-            border: 2px solid #7A2940;
-            border-radius: 5px;
-            outline: none;
-            height: 47px;
-            margin-left: 10px;
-            padding-left: -7px;
-            margin-bottom: 38px;
-}
-
-        
-        .form-row .input-container .error {
-            color: red;
-            font-size: 13px;
-            margin-top: -31px;
-            display: none;
-            margin-left: 21px;
-            position: absolute;
-}
-        
-        .btn-group {
-            display: flex;
-            justify-content: flex-end;
-            gap: 10px;
-            margin-top: 20px;
-        }
-        .btn-group button {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 18px;
-            cursor: pointer;
-            font-weight: bold;
-            color: #FFFFFF;
-        }
-        .btn-group .cancel {
-            color: #871032;
-            background-color: white;
-            margin-right: 29px;
-            border: 2px solid silver;
-            border-radius: 38px;
-            width: 9%;
-}
-
-        
-        .btn-group .save {
-            background-color: #a33856;
-            margin-right: 426px;
-            width: 9%;
-            font-size: small;
-}
-        
-        .board{
-                width: 218px;
-                margin-left: -20px;
-                transition: background-color 0.3s ease;
-                height: 35px;
-        }
-        .user2{
-            width: 152px !important;
-            height: 31px !important;
-            margin-left: -94px !important;
-            padding-left: 64px !important;
-        }
-        #newUserForm{
-            
-        width: 93%;
-        padding: 63px;
-        margin-left: -22px;
-        }
-
-        h3 {
-            color: black;
-            display: inline-block;
-            padding-bottom: 0px;
-            font-size: 20px;
-            font-weight: bold;
-            margin-left: 53px;
-            position: relative;
-            margin-bottom: 15px;
-            margin-top: 26px;
-}
-
-
-        h3::before {
-            content: "";
-            position: absolute;
-            top: -10px;
-            left: 0;
-            width: 28%; 
-            height: 4px; 
-            background-color:#9a1b69; 
-            border-radius: 2px; 
-}
-
-        h3::after {
-            content: none; 
-}
-        #name {
-            padding-left: 10px; 
-        }
-        #email{
-            padding-left: 10px; 
-        }
-        #contact{
-            padding-left: 10px; 
-        }
-        #designation{
-            padding-left: 10px;
-        }
-        #password{
-            padding-left: 10px;
-        }
-        #confirm-password{
-            padding-left: 10px;
-        }
-        .new{
-            color:silver;
-            margin-left: 10px;
-        }
-        .toggle-button {
-            font-size: 33px;
-            cursor: pointer;
-            color: #333;
-            display: flex;
-            align-items: center;
-            margin-right: 1040px
-}
-    </style>
+    <link rel="stylesheet" href="../static/profile.css">
 </head>
 <body>
     <div class="container">
