--- a/demo/templates/nav.html
+++ b/demo/templates/nav.html
@@ -97,7 +97,7 @@
                             <span style="font-weight: bold;">User Name</span><br>
                             <span style="font-weight: lighter;">Admin</span>
                         </span>
-                        <hr>
+                        <hr class="line">
                       <li><a href="#" class="Profile1"><i class="fas fa-user"></i> Profile</a></li>
                       <li><a href="#" class="loger1" id="logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
                   </ul>
@@ -137,6 +137,7 @@
             event.preventDefault();
             window.location.href = '/panel'; 
         });
+
     </script>
 </body>
 </html>
