--- a/demo/templates/Profile.html
+++ b/demo/templates/Profile.html
@@ -21,31 +21,31 @@
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="input-container">
-                        <input type="text" id="name" placeholder="Name">
+                        <input type="text" id="name" name="name" placeholder="Name">
                         <span class="error" id="name-error">Please enter the name</span>
                     </div>
                     <div class="input-container">
-                        <input type="email" id="email" placeholder="E-Mail ID">
+                        <input type="email" id="email" name="email" placeholder="E-Mail ID">
                         <span class="error" id="email-error"> Please enter the valid email</span>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="input-container">
-                        <input type="text" id="contact" placeholder="Contact No.">
+                        <input type="text" id="contact" name="contact" placeholder="Contact No.">
                         <span class="error" id="contact-error">Contact number must contain 10 digits</span>
                     </div>
                     <div class="input-container">
-                        <input type="text" id="designation" placeholder="Designation">
+                        <input type="text" id="designation" name="designation" placeholder="Designation">
                         <span class="error" id="designation-error">Invalid designation</span>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="input-container">
-                        <input type="password" id="password" placeholder="Password">
+                        <input type="password" id="password" name="password" placeholder="Password">
                         <span class="error" id="password-error">Password field is required</span>
                     </div>
                     <div class="input-container">
-                        <input type="password" id="confirm-password" placeholder="Confirm Password">
+                        <input type="password" id="confirm-password" name="confirm_password" placeholder="Confirm Password">
                         <span class="error" id="confirm-password-error">Password does not match</span>
                     </div>
                 </div>
