--- a/demo/templates/nav.html
+++ b/demo/templates/nav.html
@@ -22,55 +22,55 @@
                 <li class="menu-item">
                     <a href="#" class="user1"><i class="fas fa-user"></i> User</a>
                     <ul class="submenu">
-                        <li class="user2"><a href="/Profile/" class="point">| New user</a></li>
-                        <li class="user2"><a href="/manage_users/" class="point">| Manage user</a></li>
+                        <li class="user2"><a href="/Profile/" class="point"> New user</a></li>
+                        <li class="user2"><a href="/manage_users/" class="point"> Manage user</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
                     <a href="#" class="user1"><i class="fas fa-plane"></i> Flight</a>
                     <ul class="submenu">
-                        <li class="user2"><a href="#" class="point">| New Flight</a></li>
-                        <li class="user2"><a href="#" class="point">| Manage Flights</a></li>
+                        <li class="user2"><a href="#" class="point"> New Flight</a></li>
+                        <li class="user2"><a href="#" class="point"> Manage Flights</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
                     <a href="#" class="user1"><i class="fas fa-chair"></i> Seat</a>
                     <ul class="submenu">
-                        <li class="user2"><a href="#" class="point">| New Seat</a></li>
-                        <li class="user2"><a href="#" class="point">| Manage Seat</a></li>
+                        <li class="user2"><a href="#" class="point"> New Seat</a></li>
+                        <li class="user2"><a href="#" class="point"> Manage Seat</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
                     <a href="#" class="user1"><i class="fas fa-walking"></i> Traveller</a>
                     <ul class="submenu">
-                        <li class="user2"><a href="#" class="point">| New Travellers</a></li>
-                        <li class="user2"><a href="#" class="point">| Manage Traveller</a></li>
+                        <li class="user2"><a href="#" class="point"> New Travellers</a></li>
+                        <li class="user2"><a href="#" class="point"> Manage Traveller</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
                     <a href="#" class="user1"><i class="fas fa-user-friends"></i> Passenger</a>
                     <ul class="submenu">
-                        <li class="user2"><a href="#" class="point">| New Passenger</a></li>
-                        <li class="user2"><a href="#" class="point">| Manage Passenger</a></li>
+                        <li class="user2"><a href="#" class="point">New Passenger</a></li>
+                        <li class="user2"><a href="#" class="point">Manage Passenger</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
                     <a href="#" class="user1"><i class="fas fa-credit-card"></i> Payment</a>
                     <ul class="submenu">
-                        <li class="user2"><a href="#" class="point">| Add Payment</a></li>
-                        <li class="user2"><a href="#" class="point">| Manage Payment</a></li>
+                        <li class="user2"><a href="#" class="point"> Add Payment</a></li>
+                        <li class="user2"><a href="#" class="point"> Manage Payment</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
                     <a href="#" class="user1"><i class="fas fa-file-alt"></i> Report</a>
                     <ul class="submenu">
-                        <li class="user2"><a href="#" class="point">| Manage Flights</a></li>
+                        <li class="user2"><a href="#" class="point">Manage Flights</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
                     <a href="#" class="user1"><i class="fas fa-star"></i> Ratings</a>
                     <ul class="submenu">
-                        <li class="user2"><a href="#" class="point">| View Ratings</a></li>
+                        <li class="user2"><a href="#" class="point"> View Ratings</a></li>
                     </ul>
                 </li>
             </ul>
