--- a/demo/templates/panel.html
+++ b/demo/templates/panel.html
@@ -17,11 +17,11 @@
                     <form id="login-form" method="POST">
                         <h2>Log in as an admin user</h2>
                         <div class="input-group">
-                            <input type="text" id="username" name="username" placeholder="User Name">
+                            <input type="text" id="username" name="username" placeholder="User Name" autocomplete="off">
                             <span class="error" id="username-error">Invalid user name</span>
                         </div>
                         <div class="input-group">
-                            <input type="password" id="password" name="password" placeholder="Password">
+                            <input type="password" id="password" name="password" placeholder="Password" autocomplete="off">
                             <span class="error" id="password-error">Invalid password</span>
                         </div>
                         <button type="submit" class="Login">Log in</button>
