--- a/demo/static/manage_users.css
+++ b/demo/static/manage_users.css
@@ -120,5 +120,30 @@
     width: 220px;
     height: 32px;
         }
-        
 
+ hr{
+    color: #f4eded3d;
+  margin-top: 10px;
+ }       
+        
+ .name2 {
+    display: flex;
+    flex-direction: column;
+    margin-left: 77px;
+    margin-top: -40px;
+  }
+  .dropdown-menu {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #fff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    margin-top: 6px;
+    list-style-type: none;
+    padding: 46px 0;
+    top: 26px !important;
+    left: -202px !important;
+    height: 121px;
+    width: 184px;
+  }
