--- a/demo/static/nav.css
+++ b/demo/static/nav.css
@@ -123,10 +123,10 @@ border-radius: 5px;
 margin-top: 6px;
 list-style-type: none;
 padding: 46px 0;
-top: 32px !important;
-  left: -190px !important;
-  height: 185px;
-  width: 182px;
+top: 26px !important;
+  left: -202px !important;
+  height: 145px;
+  width: 184px;
 }
 
 .dropdown-menu li {
@@ -232,10 +232,10 @@ width: 100%;
 }
 .name2{
 
-display: flex;
-flex-direction: column;
-margin-left: 67px; 
-margin-top: -42px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 77px;
+    margin-top: -74px;
 }
 
 
@@ -262,7 +262,8 @@ font-size: 16px;
 }
 
 hr{
-    color: grey;
+    color: #fdfbfb;
+  margin-top: 35px;
 }
 
 
