--- a/demo/static/profile.css
+++ b/demo/static/profile.css
@@ -181,26 +181,37 @@
             margin-right: 1040px
 }
 .dropdown-menu{
-    position: absolute;
-  right: 0;
-  background-color: #fff;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  margin-top: 10px;
-  list-style-type: none;
-  padding: 17px 0;
-  top: 22px !important;
-  left: -168px !important;
-  height: 147px;
-  width: 150px;
+    
+        position: absolute;
+        right: 0;
+        background-color: #fff;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 5px;
+        margin-top: 10px;
+        list-style-type: none;
+        padding: 17px 0;
+        top: 22px !important;
+        left: -200px !important;
+        height: 160px;
+        width: 178px;
+      }
 
-}
 .Profile1{
     height: 12px !important;
+    margin-left: 10px;
 }
 .loger1{
     height: 12px;
+    margin-left: 10px;
 }
 hr{
    color:  #f8f7f74a;
+   margin-top: 24px;
+}
+.name2{
+    display: flex;
+  flex-direction: column;
+  margin-left: 71px;
+  margin-top: -42px;
+
 }
