--- a/demo/templates/manage_users.html
+++ b/demo/templates/manage_users.html
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+    <div class="container1">
+        <div class="module-container user-modules">
+        
+            <h6 class="user">USER MODULES<span class="new">. new user</span></h6>
+        </div>
+    </div>
+    <div class="new container">
     <a href="{% url 'Profile' %}" class="add-Profile">
         <i class="fas fa-plus"></i> 
     </a>
@@ -56,6 +63,7 @@
             </tbody>
         </table>
     </div>
+</div>
 </body>
 
 </html>
