--- a/demo/templates/nav.html
+++ b/demo/templates/nav.html
@@ -99,8 +99,8 @@
                             <span style="font-weight: lighter;">Admin</span>
                         </span>
                         <hr class="line">
-                      <li><a href="#" class="Profile1"><i class="fas fa-user"></i> Profile</a></li>
-                      <li><a href="#" class="loger1" id="logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                      <li><a href="#" class="Profile1"><i class="fas fa-user profile-page"></i> Profile</a></li>
+                      <li><a href="#" class="loger1" id="logout"><i class="fas fa-sign-out-alt profile-page" ></i> Logout</a></li>
                   </ul>
               </div>
               
