--- a/demo/static/manage_users.css
+++ b/demo/static/manage_users.css
@@ -176,15 +176,15 @@
     color: grey; 
 }
 .main-content{
-        margin-top: -16px;
+        margin-top: -20px;
 }
 .user{
     margin-top: -2px;
     font-size: 16px;
 }
 .main-content header {
-    width: 86%;
-    margin-left: 206px;
+    width: 1293px;
+    margin-left: 200px;
   }
   .user-info2{
     
