--- a/demo/templates/edit_profile.html
+++ b/demo/templates/edit_profile.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>New User Form</title>
     <style>
          
@@ -335,7 +336,7 @@ hr{
 </body>
 </html> -->
 
-
+ -->
 
 
 
