--- a/demo/templates/nav.html
+++ b/demo/templates/nav.html
@@ -94,9 +94,9 @@
                   <ul class="dropdown-menu">
                     <div class="user-info2" id="user-info2">
                         <img src="../static/images/profile.jpg" alt="User Profile">
-                        <span class="name2">
-                            <span style="font-weight: bold;">User Name</span><br>
-                            <span style="font-weight: lighter;">Admin</span>
+                        <span class="name2"> 
+                            <span style="font-weight: bold; margin-bottom: 8px;">User Name</span><br>
+                            <span style="font-weight: lighter;color: grey;" >Admin</span>
                         </span>
                         <hr class="line">
                       <li><a href="#" class="Profile1"><i class="fas fa-user profile-page"></i> Profile</a></li>
